--- a/.github/workflows/test_207480.yml
+++ b/.github/workflows/test_207480.yml
@@ -1,28 +1,27 @@
-name: Ejecutar pruebas
+name: Test Homework 207480
 
 on:
   schedule:
-    - cron: '0 18 * * *' # 12 PM CST (6 PM UTC)
-  workflow_dispatch: # Permite ejecución manual
+    - cron: '0 18 * * *'  # 12 PM CST (18:00 UTC)
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Clonar el repositorio
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configurar Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.9'
 
-      - name: Instalar dependencias
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
+          pip install -r requirements.txt
 
-      - name: Ejecutar pruebas
-        run: pytest
+      - name: Run pytest
+        run: |
+          pytest tareas/207480/test_function.py
+
 
