--- a/.github/workflows/test_207480.yml
+++ b/.github/workflows/test_207480.yml
@@ -1,27 +1,33 @@
-name: Test Homework 207480
+name: Daily Test Workflow
 
 on:
   schedule:
-    - cron: '0 18 * * *'  # 12 PM CST (18:00 UTC)
+    # Programar a las 12 PM hora Ciudad de México (CST)
+    # Nota: GitHub Actions usa UTC, así que ajustamos la hora
+    # CST es UTC-6, por lo que 18:00 UTC corresponde a 12:00 CST
+    - cron: '0 18 * * *'
+  
+  # También permitir ejecución manual
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Run pytest
-        run: |
-          pytest tareas/207480/test_function.py
-
-
+    - name: Checkout código
+      uses: actions/checkout@v3
+    
+    - name: Configurar Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.9'
+    
+    - name: Instalar dependencias
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+    
+    - name: Ejecutar pruebas con pytest
+      run: |
+        pytest tareas/207480/test_function.py
